# micro_os

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  lv_conf.h  main.c
src/: board.h  jb_mono_14.c  main.c
src/drivers/: screen.c  screen.h  spi_dma.c  spi_dma.h
src/inputs/: mouse.c  mouse.h
src/micro_dwm/: micro_dwm.c  micro_dwm.h
src/micro_lib/: micro_lib.c  micro_lib.h
src/micro_term/: micro_term.c  micro_term.h
src/themes/: theme.c  theme.h
